# pokelib

./: .gitmodules  CMakeLists.txt  README.md  awk.scripts  compile_commands.json  pokelib.db  prepare_sql.sh
pokedex-cli/: CMakeLists.txt
pokedex-cli/src/: main.cpp
pokeimporter/: importer.py  pokemon.bak  pokemon.csv
pokelib/: CMakeLists.txt
pokelib/include/: database.h  dexpokemon.h  dexpokemontype.h  entity.h  entity_fwd.h  entity_macro.h  pkm_type.h  pokedex.h  pokemon.h  queries.h  reflect.h  request.h
pokelib/sql/: cool_queries.sql  pokemon.db  table_definition.sql
pokelib/sql/inserts/: PokeDexEntries.csv  PokemonType.sql
pokelib/src/cpp/: database.cpp  dexpokemon.cpp  dexpokemontype.cpp  pkm_type.cpp  pokedex.cpp  pokemon.cpp  queries.cpp  request.cpp
pokelib/src/sql/: table_definition.sql  types_gen8.csv
